# bazel-gazelle-go-sample

./: BUILD  Makefile  WORKSPACE  go.mod
hellomod/: BUILD.bazel  main.go
