load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/htsh-tsyk/bazel-gazelle-go-sample/hellomod",
    visibility = ["//visibility:private"],
    deps = ["@com_github_fatih_color//:go_default_library"],
)

go_binary(
    name = "echo",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_image(
    name = "docker",
    base = "@alpine_linux_amd64//image",
    cmd = "./echo",
    files = [
        ":echo",
    ],
    visibility = ["//visibility:public"],
)
